# stepik

./: pyproject.toml
DB/: models.py
Stepik/: main.py
Stepik/routers/: api_router.py  auth_router.py
routers/: __init__.py  admin_router.py  course_router.py  user_router.py
